--- a/Html/index.html
+++ b/Html/index.html
@@ -1,50 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pricing</title>
-    <link rel="stylesheet" href="../Style/app.css">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Roboto&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Benne&family=Open+Sans:wght@300&family=Roboto&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link rel="stylesheet" href="../Style/app.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+
+  <body>
     <div class="panel">
-        <div class="free">
-            <img src="../Assets/icon1.png">
-            <h1>Free</h1>
-            <ul>
-                <li>Unlimited Projects</li>
-                <li>Max 2 collaborators</li>
-                <li>Limited Features</li>
-            </ul>
-            <h2>0$ / month</h2>
-            <button type="submit">SIGN UP</button>
+      <div class="free">
+        <img src="../Assets/icon1.png" />
+        <div class="details">
+          <h1>Free</h1>
+          <ul>
+            <li>Unlimited Projects</li>
+            <li>Max 2 collaborators</li>
+            <li>Limited Features</li>
+          </ul>
+          <h2>0$ / month</h2>
+          <button type="submit">SIGN UP</button>
         </div>
-        <div class="community">
-            <img src="../Assets/icon2.png">
-            <h1>Community</h1>
-            <ul>
-                <li>Unlimited Projects</li>
-                <li>Unlimited collaborators</li>
-                <li>Limited Features</li>
-            </ul>
-            <h2>10$ / month</h2>
-            <button type="submit">FREE TRIAL</button>
+      </div>
+      <div class="community">
+        <img src="../Assets/icon2.png" />
+        <div class="details">
+          <h1>Community</h1>
+          <ul>
+            <li>Unlimited Projects</li>
+            <li>Unlimited collaborators</li>
+            <li>Limited Features</li>
+          </ul>
+          <h2>10$ / month</h2>
+          <button type="submit">FREE TRIAL</button>
         </div>
-        <div class="professional">
-            <img src="../Assets/icon3.png">
-            <h1>Professional</h1>
-            <ul>
-                <li>Unlimited Projects</li>
-                <li>Unlimited collaborators</li>
-                <li>Complete Features</li>
-            </ul>
-            <h2>20$ / month</h2>
-            <button type="submit">FREE TRIAL</button>
+      </div>
+      <div class="professional">
+        <img src="../Assets/icon3.png" />
+        <div class="details">
+          <h1>Professional</h1>
+          <ul>
+            <li>Unlimited Projects</li>
+            <li>Unlimited collaborators</li>
+            <li>Complete Features</li>
+          </ul>
+          <h2>20$ / month</h2>
+          <button type="submit">FREE TRIAL</button>
         </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
